--- a/mysql-slave/my.cnf
+++ b/mysql-slave/my.cnf
@@ -45,8 +45,8 @@ max_connections = 250
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
 #bind-address	= 127.0.0.1
-bind-address    = 0.0.0.0
-server-id = 1
+server-id = 2
+relay-log = /var/log/mysql/mysql-relay-bin.log
 log_bin = /var/log/mysql/mysql-bin.log
 binlog_do_db = pig8
 
