--- a/mysql-server/my.cnf
+++ b/mysql-server/my.cnf
@@ -48,7 +48,7 @@ max_connections = 250
 bind-address    = 0.0.0.0
 server-id = 1
 log_bin = /var/log/mysql/mysql-bin.log
-binlog_do_db = pig8
+binlog_do_db = jsongo_log
 
 #log-error	= /var/log/mysql/error.log
 
