--- a/mysql-slave/my.cnf
+++ b/mysql-slave/my.cnf
@@ -48,7 +48,7 @@ max_connections = 250
 server-id = 2
 relay-log = /var/log/mysql/mysql-relay-bin.log
 log_bin = /var/log/mysql/mysql-bin.log
-binlog_do_db = pig8
+binlog_do_db = jsongo_log
 
 #log-error	= /var/log/mysql/error.log
 
