--- a/redis-slave/redis.conf
+++ b/redis-slave/redis.conf
@@ -207,14 +207,14 @@ dir /data/redis
 #    network partition slaves automatically try to reconnect to masters
 #    and resynchronize with them.
 #
-slaveof 59.188.25.240 6379
+slaveof $MASTER_IP $MASTER_PORT
 
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the slave to authenticate before
 # starting the replication synchronization process, otherwise the master will
 # refuse the slave request.
 #
-masterauth hyredis2014
+masterauth $PASSWORD
 
 # When a slave loses its connection with the master, or when the replication
 # is still in progress, the slave can act in two different ways:
