--- a/redis-server/Dockerfile
+++ b/redis-server/Dockerfile
@@ -1,5 +1,6 @@
 FROM redis
 COPY redis.conf /usr/local/etc/redis/redis.conf
-ENTRYPOINT ["run.sh"]
+COPY run.sh /
+ENTRYPOINT ["/run.sh"]
 
-CMD [ "redis-seever", "/usr/local/etc/redis/redis.conf" ]
+CMD [ "sh" ]
